# doVoucher

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/ABI/: DAI.json  QRCheck.json
crypto/: .env.example  hardhat.config.js  package.json
crypto/ABI/: QRCheck.json  SaentisGuldenABI.json  doPay.json
crypto/contracts/: QRCheck.sol
crypto/scripts/: deploy.js
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/assets/styles/: _sketch.scss
frontend/src/assets/styles/components/: _gallery.scss
frontend/src/components/UI/: Sketch.vue
frontend/src/components/helpers/: WalletConnect.js
frontend/src/components/helpers/networksList/: index.js
frontend/src/components/helpers/tokensLists/: index.js  tokensMainnet.json  tokensPolygon.json  tokensRinkeby.json  tokensRopsten.json
frontend/src/components/modals/chooseWallet/: Modal.vue
frontend/src/crypto/: AppConnector.js
frontend/src/crypto/EVM/: SmartContract.js  index.js
frontend/src/crypto/EVM/rarible/: Connector.js  index.js
frontend/src/crypto/helpers/: index.js
frontend/src/crypto/helpers/ConnectionStore/: index.js
frontend/src/router/: index.js
frontend/src/store/: main.js
frontend/src/utils/: AppLogger.js  detectMobile.js  mobileLinkBuilder.js  string.js  walletCheck.js
frontend/src/views/: Checknft.vue  Home.vue  Pay.vue
infra/: Dockerfile
(+7 files in other folders)
